Changelog for GoodNews

- added feature to let each container have it's own SMTP settings (overrides MODX system settings)
- added feature to let each container have it's own mail charset and mail encoding settings (overrides MODX system settings)


GoodNews 1.3.6-pl (2015-03-29)
--------------------------------------------------
- added French translation (thank's Julien Studer!)
- fixed missing english strings + small typo in lexicon
- fixed a bug when sorting the Subscribers grid by subscription date
- added indicator in mailing editor if mailing is in read-only mode (sending already started)
- fixed waring message when mailing resource is in read-only mode
- fixed some PHP warnings if collections field of mailing_meta is empty (happens for resources prior to version 1.3.0-pl)
- [#33] Integrate functionality to auto-detect images and convert physical image dimensions based on src or style attributes
- fixed a problem in ContentCollection snippet when using tplWrapper
- removed ContentCollectionSnippet output if collection is empty


GoodNews 1.3.5-pl (2014-12-10)
--------------------------------------------------
- added ability to click on newsletter title to edit the newsletter
- added a switch above Newsletters grid to quickly activate/deactivate send-processes
- [#32] Add back an indicator for displaying if sending processes are activated/deactivated in settings
- fixed a problem in System settings when Admin or Editor group names have leading or trailing spaces
- fixed a bug with slider value displays in GoodNews - System settings
- [#30] added indicator in GoodNews - System Checks for requirement of PHP versions > 5.3.0
- fixed a bug in resource rendering (this was a tricky one!)


GoodNews 1.3.4-pl (2014-12-03)
--------------------------------------------------
- fixed a problem where Resource Collections aren't restored correctly from database
- added container filter dropdown in Resource Collections grid (better user experience)